# RegicideOSArch

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
build-system/: README.md  dagger_common.py  dagger_pipeline.py  dagger_pipeline_arm64.py  dagger_pipeline_wsl.py
build-system/arch/: build-qemu-image-arm64.sh  build-qemu-image-guestfish.sh  build-qemu-image-guestmount.sh  build-qemu-image.sh  create-vbox-vm.sh  post-install-wsl.sh  post-install.sh  seed-overlays.sh
build-system/arch/container/: Dockerfile
build-system/arch/post-install-wsl.d/: 20-a11y-desktop.sh  40-services.sh  50-containers.sh  65-firstboot.sh  70-flatpak-apps.sh  80-cleanup.sh  85-wsl.sh  90-verify.sh  99-finalize.sh
build-system/arch/post-install.d/: 00-initramfs.sh  10-users-sudo.sh  20-a11y-desktop.sh  25-regicide-update.sh  30-locale.sh  40-services.sh  50-containers.sh  55-ai-cli.sh  58-btrfs-assistant.sh  60-gpu-nvidia.sh  70-flatpak-apps.sh  75-cosmic-vm.sh  80-cleanup.sh  90-verify.sh  99-finalize.sh
build-system/tests/: vm-smoke-test.sh
data/: regicide-rollback-apply.service
src/regicide_update/: __init__.py  boot_revert.py  cli_image.py  cli_rollback.py  cli_update.py  common.py  image.py  snapshots.py
tests/: test_common.py  test_snapshots.py
